aggiunto scritta _in arrivo_

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </div>
     <div class="middle">
       <h1 class="neon-text">KjMercy</h1>
+      <p class="neon-text"><em>In arrivo</em></p>
     </div>
     <div class="bottomleft">
       <p>Social</p>
