aggiunto social media icons e credits freepik

--- a/index.html
+++ b/index.html
@@ -1,26 +1,59 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
-  <title>KjMercy</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <title>KjMercy</title>
+  </head>
+  <body>
+    <div class="bgimg">
+      <div class="topleft">
+        <p>Kj</p>
+      </div>
+      <div class="middle">
+        <h1 class="neon-text">KjMercy</h1>
+        <p class="neon-text"><em>In arrivo</em></p>
+      </div>
+      <div class="socialmedia-icons">
+        <a href="https://www.instagram.com/kj_mersi/" target="_blank"
+          ><img
+            height="32px"
+            width="32px"
+            src="./assets/instagram.svg"
+            alt="Instagram"
+        /></a>
+        <a href="https://twitter.com/merci_KJ" target="_blank"
+          ><img
+            height="32px"
+            width="32px"
+            src="./assets/twitter.svg"
+            alt="Twitter"
+        /></a>
+        <a
+          href="mailto:kjanijamersimoski@gmail.com?subject=Mail dal sito kjmercy.github.io&body=Ciao Kj!%0D%0A %0D%0ATi sto contaddando per ..."
+          ><img height="32px" width="32px" src="./assets/mail.svg" alt="E-mail"
+        /></a>
+      </div>
+      <div class="info">
+        <img
+          height="24px"
+          width="24px"
+          src="./assets/information.svg"
+          alt="Info"
+          onclick="toggleInfoDiv()"
+        />
+      </div>
+      <div class="info-icons" id="info-icons">
+        Icons made by
+        <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
+        <a href="https://www.flaticon.com/" title="Flaticon"
+          >www.flaticon.com</a
+        >
+      </div>
+    </div>
 
-  <div class="bgimg">
-    <div class="topleft">
-      <p>Kj</p>
-    </div>
-    <div class="middle">
-      <h1 class="neon-text">KjMercy</h1>
-      <p class="neon-text"><em>In arrivo</em></p>
-    </div>
-    <div class="bottomleft">
-      <p>Social</p>
-    </div>
-  </div>
-  
-</body>
+    <script src="./index.js"></script>
+  </body>
 </html>
